<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="loading">Loading…</string>
    <string name="syncing">Syncing…</string>
    <string name="service_label">Technician Service</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="lunch_in">Start Lunch</string>
    <string name="lunch_out">End Lunch</string>
    <string name="brake_in">Start Break</string>
    <string name="brake_out">End Break</string>
    <string name="enter_odometer_value">Enter odometer</string>
    <string name="enter_message">Type your text</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="details">Details</string>
    <string name="dispatch">Dispatch</string>
    <string name="unDispatch">UnDispatch</string>
    <string name="complete">Complete</string>
    <string name="cant_complete">Can\'t Complete Call</string>
    <string name="incomplete_title">Incomplete</string>
    <string name="pay_periods">Pay Periods</string>
    <string name="parts">Days</string>
    <string name="start_new_conversation">Start new conversation</string>
    <string name="call_number">Call #</string>
    <string name="date_received">Date received</string>
    <string name="call_type">Call type</string>
    <string name="equipment_id">Equipment id</string>
    <string name="make_model">Make/Model</string>
    <string name="contact_name">Contact name</string>
    <string name="problem_description">Problem description</string>
    <string name="customer_number">Customer number</string>
    <string name="serial_number">Serial number</string>
    <string name="remarks">Location remarks</string>
    <string name="order_details">Service Call Details</string>
    <string name="caller">Caller</string>
    <string name="bill_code">Bill code</string>
    <string name="terms">Terms</string>
    <string name="call_priority">Call priority</string>
    <string name="equipment_install_date">Equipment install date</string>
    <string name="preventive_maintenance_title">Preventive Maintenance</string>
    <string name="last_date">Last date: %1$s </string>
    <string name="last_display">Last display: %1$s </string>
    <string name="due_display">Due display: %1$s </string>
    <string name="pm_due_date">Due date: %1$s </string>
    <string name="due_date">Due date</string>
    <string name="ip_address">IP address</string>
    <string name="mac_address">MAC address</string>
    <string name="equipment_primary_note">Equipment primary note</string>
    <string name="customer_phone_number">Customer phone number</string>
    <string name="work_order_number">Work order number</string>
    <string name="call_remarks">Call remarks</string>
    <string name="customer_address">Customer address</string>
    <string name="invalid_odometer_value">Invalid odometer value</string>
    <string name="save_password">Remember me</string>
    <string name="technicians">Technicians</string>
    <string name="contact_email">Contact email</string>
    <string name="contact_phone">Contact phone</string>
    <string name="confirm_log_out">Are you sure you want to log out?</string>
    <string name="logout">Log Out</string>
    <string name="completed">Completed</string>
    <string name="help_title">Help</string>
    <string name="equipment_history">Equipment History</string>
    <string name="technician_name">Technician name</string>
    <string name="call_date">Call date</string>
    <string name="problem_codes">Problem codes</string>
    <string name="repair_codes">Repair codes</string>
    <string name="meters">Meters</string>
    <string name="used_parts">Used Parts</string>
    <string name="schedule">Schedule</string>
    <string name="hold">Hold</string>
    <string name="cancel">Cancel</string>
    <string name="arrive">Arrive</string>
    <string name="release">Release</string>
    <string name="search_warehouses">Search Warehouses</string>
    <string name="enter_part_number">Enter part number</string>
    <string name="hold_code">Hold code</string>
    <string name="set">Set</string>
    <string name="enter_value">Enter value</string>
    <string name="use_part">Use</string>
    <string name="usage_status">Usage status</string>
    <string name="quantity">Quantity</string>
    <string name="cost">Cost</string>
    <string name="void_cost">Void Cost</string>
    <string name="display_meter">Display</string>
    <string name="actual_meter">Actual</string>
    <string name="ok">OK</string>
    <string name="skip">Skip</string>
    <string name="problem_code">Problem Code *</string>
    <string name="repair_code">Repair Code *</string>
    <string name="add">Add</string>
    <string name="complete_remarks">Complete remarks *</string>
    <string name="remarks_label">Remarks *</string>
    <string name="group_calls">Group Calls</string>
    <string name="confirm_cancel">Confirm cancel</string>
    <string name="back">Back</string>
    <string name="reschedule">Reschedule</string>
    <string name="available_quantity">Available quantity:</string>
    <string name="edit_description_title">Edit part description:</string>
    <string name="quantity_error">Enter a quantity that is greater than 0.</string>
    <string name="quantity_greater_than_have">Technician you specified does not have the quantity of item requested in stock.</string>
    <string name="negative_quantity">The quantity will be negative</string>
    <string name="remove">Remove</string>
    <string name="add_part">Add Part</string>
    <string name="can_not_load_meters">Can not load meters from server</string>
    <string name="enter_new_meter">Enter new meter</string>
    <string name="refresh">Refresh</string>
    <string name="reschedule_code">Reschedule code</string>
    <string name="meter_smaller_value_error">Value must be greater than the previous reading.</string>
    <string name="on_hold_code">On hold code</string>
    <string name="need_part">Need</string>
    <string name="view_used_parts">View used parts</string>
    <string name="complete_needed_error">Please use or remove needed or pending parts before complete</string>
    <string name="no_needed_parts">You have no needed or pending parts</string>
    <string name="cancel_code">Cancel code *</string>
    <string name="comments">Comments</string>
    <string name="change_password">Change Password</string>
    <string name="success">Success</string>
    <string name="my_warehouse">My Warehouse</string>
    <string name="turn_on">Turn on</string>
    <string name="send">Send</string>
    <string name="arrive_time">Arrive time</string>
    <string name="arrive_date">Arrive Date</string>
    <string name="dispatch_time">Dispatch time</string>
    <string name="dispatch_date">Dispatch Date</string>
    <string name="add_assistant">Add Assistant</string>
    <string name="cancel_call">Cancel Call</string>
    <string name="complete_time">Complete time</string>
    <string name="technician">Technician</string>
    <string name="po_number">PO number</string>
    <string name="title_activity_view_assistants">Assistants</string>
    <string name="view_assistants">Assistants</string>
    <string name="empty_assistants">No assistants assigned to this service call.</string>
    <string name="contract_number">Contract number</string>
    <string name="assist_part_error">Assistant can not add part</string>
    <string name="assist_add_assist_error">Assistant can not add assistant</string>
    <string name="activityCode">Activity Code *</string>
    <string name="request_parts">Request Parts</string>
    <string name="departure_data">Departure</string>
    <string name="enter_equipment_search">Enter equipment name or serial number</string>
    <string name="error">Error</string>
    <string name="search_results">Search results</string>
    <string name="confirm">Confirm</string>
    <string name="next">Continue</string>
    <string name="_plus">+</string>
    <string name="_x">X</string>
    <string name="needed_parts">Needed Parts</string>
    <string name="save">Save</string>
    <string name="filter_by_technician">Filter by technician</string>
    <string name="filter">Filter</string>
    <string name="copyright_text">Copyright © 2019–2021 ECI Software Solutions, Inc. All rights reserved.</string>
    <string name="account">Account</string>
    <string name="logout_warning">You need to clock out before logging out. Would you like to clock out now?</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="read">Read</string>
    <string name="license">License agreement</string>
    <string name="accept_license">Please read and accept license agreement before app use</string>
    <string name="schedule_time">Schedule time</string>
    <string name="unknown_equipment_item">UNKNOWN EQUIPMENT/ITEM</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="invalid_credentials_message">You must have technician rights and use valid credentials. Please try again or contact your system administrator for assistance.</string>
    <string name="warning">Warning</string>
    <string name="warning_odometer_message">You have entered an odometer reading that is less than the previously entered reading.</string>
    <string name="clock_in_question">Technician is not clocked in. Would you like to clock in now?</string>
    <string name="technician_not_clocked_in">Technician is not clocked in.</string>
    <string name="technician_number">Technician number</string>
    <string name="phone_number">Phone Number</string>
    <string name="current_call">Current call</string>
    <string name="location">Dispatched Call Address</string>
    <string name="request">Request</string>
    <string name="chat">Chat</string>
    <string name="part_number">Part #</string>
    <string name="attachments">Attachments</string>
    <string name="attach_file">Add Attachment</string>
    <string name="sign">Sign here</string>
    <string name="uploading">Uploading…</string>
    <string name="clear">Clear</string>
    <string name="request_part_quit_message">Parts have been added, are you sure that you want to discard request?</string>
    <string name="discard">Discard</string>
    <string name="part_request_success">Part request successful</string>
    <string name="part_request_failed">Part request was not successful. Please try again.</string>
    <string name="call_summary">Call Summary</string>
    <string name="labor">Labor</string>
    <string name="field_transfer">Field Transfer</string>
    <string name="new_request">New Request</string>
    <string name="new_transfer_request">New Transfer Request</string>
    <string name="attached_files">Attached Files</string>
    <string name="travel_hours">Travel Hours</string>
    <string name="from">Request From</string>
    <string name="part">Part</string>
    <string name="part_description">Part Description</string>
    <string name="date">Date</string>
    <string name="unsynced_data">Unsynced Data</string>
    <string name="settings_help_title"><![CDATA[Settings & Help]]></string>
    <string name="delete">Delete</string>
    <string name="create_call_title">Create Service Call</string>
    <string name="notes">Notes</string>
    <string name="select_warehouse">Select Warehouse</string>
    <string name="select_bin">Select Bin</string>
    <string name="select_part">Select Part</string>
    <string name="warehouse_transfer">Warehouse Transfer</string>
    <string name="bin_dialog_field">Bin:</string>
    <string name="serial_number_bin_dialog">SN:</string>
</resources>