<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_equipment_history"
        android:title="@string/equipment_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_assistants"
        android:title="@string/view_assistants"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_attachments"
        android:title="@string/attachments"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_notes"
        android:title="@string/notes"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_transfer"
        android:title="@string/warehouse_transfer"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_cancel_call"
        android:title="@string/cancel_call"
        app:showAsAction="never" />
</menu>