<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtFromTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTechnicianName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="Technician name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtCreatedDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="date" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/part"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtPart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="Part item" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/part_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtPartDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="Part description" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="3" />

    <LinearLayout
        android:id="@+id/layActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAccept"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnReject"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reject" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layMyActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>
