<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_part"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/binField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bin_dialog_field"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleDialog" />

    <TextView
        android:id="@+id/binText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/binField"
        app:layout_constraintTop_toBottomOf="@id/titleDialog"
        tools:text="AlvaroWH" />

    <TextView
        android:id="@+id/serialNumberField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serial_number_bin_dialog"
        android:visibility="gone"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/binField"
        tools:text="SN: " />

    <TextView
        android:id="@+id/serialNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/serialNumberField"
        app:layout_constraintTop_toBottomOf="@id/binField"
        tools:text="123456" />

    <TextView
        android:id="@+id/availableField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_quantity"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serialNumberField" />

    <TextView
        android:id="@+id/availableValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/availableField"
        app:layout_constraintTop_toBottomOf="@id/serialNumberField"
        tools:text="4" />

    <TextView
        android:id="@+id/quantityField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/availableField" />

    <EditText
        android:id="@+id/txtQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:hint="@string/quantity"
        android:inputType="number"
        android:maxLength="12"
        android:text="1"
        app:layout_constraintTop_toBottomOf="@id/quantityField" />
</androidx.constraintlayout.widget.ConstraintLayout>