<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/activity_part_use"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="eci.technician.activities.PartUseActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available_quantity"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/txtAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="5" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtQuantity"
            android:maxLength="12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:inputType="number"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/partDescriptionTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/part_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTxtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/part_description"
            android:maxLength="100"
            android:selectAllOnFocus="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnBack"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btnNeed"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/save" />

            <Button
                android:id="@+id/btnUse"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>
</layout>